# fsm-gen-tool

./: .gitignore  CMakeLists.txt  README.md  configure
.github/workflows/: c-cpp.yml
app/: client.cpp
generator/: CMakeLists.txt  parser.cpp  validation.xml
include/: fsm.h
xml/: add_to_cart.xml  life_purpose.xml  process_state.xml
